# ctx

./: .gitignore  COPYING  Makefile  configure.sh  contributing.txt  ctx-arm-neon.c  ctx-avx2.c  ctx-lib.c  ctx-mmx.c  ctx-sse2.c  ctx-tiny.c  ctx-x86-64-v2.c  ctx-x86-64-v3.c  ctx.c  ctx.css  ctx.h  deps.c  graphics.ctx.ctx.yml  graphics.ctx.terminal.appdata.xml  graphics.ctx.terminal.desktop  graphics.ctx.terminal.yml  index.html  library.json  library.properties  license.txt  main.c  subpagemenu.txt  svg.h  svgp.h  test-renderpaths.c  upng.h
_s0il_/: .gitignore  Makefile  README  elf_strip_pie.c  gen_fs.sh  magic.c  magic.h  main.c  picoc_bundle.c  port_config.h  run-clib.c  run-stdio.c  run-symbols.c  run.c  run.h  s0il-clib.c  s0il-clib.h  s0il-magic.c  s0il-run.c  s0il-run.h  s0il-symbols.c  s0il.c  s0il.h  ui.c  ui.h
bash/: analog-clock.sh  analog-clock2.sh  cls.sh  fm.sh  play.sh
clients/: Makefile  audio-pcm.c  audioplayer.sh  clock.c  clock.sh  clock.static.c  clock2.c  ctx-clock.sh  ctx-gif.c  ctx-img.c  ctx-mpg.c  ctx.bash  demo.c  dots.c  events.sh  gifplay.c  gui.c  gui.h  img.c  itk-sampler.c  itk.h  pl_mpeg_player.c  plot.sh  test-drag-event.c  test.c  ui.c
convert/: convert.c  ctx-dir.c  ctx-gif.c  ctx-img.c  ctx-mpg.c  svg.h
demo/: Makefile  README  apps.inc  demo.c  ui.c  ui.h
demos/: 7gui-circle-editor.c  7gui-flightbooker.c  7gui-timer.c  audioplayer.sh  bash-test.sh  clock.sh  ctx-img.c  ctx-mpg.c  ctx.bash  demo.c  itk.h
docs/: ctx.css  (+2 more)
s0il/pico/: .gitignore  CMakeLists.txt  bundled-programs-arm.c  ctx.c  s0il.c  st7789_lcd.pio  talk.c
(+821 files in other folders)
